Added rain visualization.