@@ -1,1 +1,1 @@
-{"cache":{"name":"cache","create":"CREATE TABLE `cache` (\n  `cache_id` int(11) NOT NULL AUTO_INCREMENT,\n  `cache_uri` varchar(255) COLLATE latin1_general_ci NOT NULL,\n  `cache_content` longtext COLLATE latin1_general_ci NOT NULL,\n  `cache_date` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`cache_id`)\n) ENGINE=InnoDB DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci ROW_FORMAT=COMPACT","records":[]},"contact":{"name":"contact","create":"CREATE TABLE `contact` (\n  `contact_id` int(11) NOT NULL AUTO_INCREMENT,\n  `contact_nickname` text COLLATE latin1_general_ci NOT NULL,\n  `contact_fullname` text COLLATE latin1_general_ci DEFAULT NULL,\n  `contact_image` text COLLATE latin1_general_ci DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) NOT NULL DEFAULT 0,\n  PRIMARY KEY (`contact_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci","records":[]},"contact_meta":{"name":"contact_meta","create":"CREATE TABLE `contact_meta` (\n  `contact_meta_id` int(11) NOT NULL AUTO_INCREMENT,\n  `contact_id` int(11) NOT NULL,\n  `contact_meta_name` text COLLATE latin1_general_ci NOT NULL,\n  `contact_meta_content` text COLLATE latin1_general_ci NOT NULL,\n  `contact_meta_primary` tinyint(1) DEFAULT NULL,\n  PRIMARY KEY (`contact_meta_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci","records":[]},"data":{"name":"data","create":"CREATE TABLE `data` (\n  `data_id` int(11) NOT NULL AUTO_INCREMENT,\n  `data_name` tinytext NOT NULL,\n  `data_slug` text NOT NULL,\n  `data_content` longtext DEFAULT NULL,\n  `data_type` varchar(25) NOT NULL,\n  `data_parent` int(11) NOT NULL DEFAULT 0,\n  `data_status` varchar(25) DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) NOT NULL DEFAULT 0,\n  PRIMARY KEY (`data_id`),\n  KEY `data_type` (`data_type`),\n  KEY `data_parent` (`data_parent`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1","records":[]},"data_meta":{"name":"data_meta","create":"CREATE TABLE `data_meta` (\n  `data_meta_id` int(11) NOT NULL AUTO_INCREMENT,\n  `data_id` int(11) NOT NULL,\n  `data_meta_name` varchar(25) NOT NULL,\n  `data_meta_content` text NOT NULL,\n  PRIMARY KEY (`data_meta_id`),\n  KEY `data_id` (`data_id`),\n  KEY `data_meta_name` (`data_meta_name`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1","records":[]},"history":{"name":"history","create":"CREATE TABLE `history` (\n  `history_id` int(11) NOT NULL AUTO_INCREMENT,\n  `user_key` int(11) NOT NULL DEFAULT 0,\n  `data_id` int(11) NOT NULL,\n  `history_val` varchar(255) COLLATE latin1_general_ci NOT NULL,\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`history_id`)\n) ENGINE=InnoDB DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci","records":[]},"role":{"name":"role","create":"CREATE TABLE `role` (\n  `role_id` int(11) NOT NULL AUTO_INCREMENT,\n  `role_title` text NOT NULL,\n  `role_permissions` longtext NOT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`role_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8","records":[]},"route":{"name":"route","create":"CREATE TABLE `route` (\n  `route_id` int(11) NOT NULL AUTO_INCREMENT,\n  `route_ord` int(11) NOT NULL DEFAULT 0,\n  `route_controller` text NOT NULL,\n  `route_ext` text DEFAULT NULL,\n  `ext_primary` tinyint(1) NOT NULL DEFAULT 0,\n  `route_slug` text DEFAULT NULL,\n  `route_admin` tinyint(1) NOT NULL DEFAULT 0,\n  `in_h_nav` tinyint(1) NOT NULL DEFAULT 0,\n  `in_f_nav` tinyint(1) NOT NULL DEFAULT 0,\n  `nav_display` tinytext DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) DEFAULT NULL,\n  PRIMARY KEY (`route_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1","records":[]},"session":{"name":"session","create":"CREATE TABLE `session` (\n  `session_id` int(11) NOT NULL AUTO_INCREMENT,\n  `user_key` int(11) NOT NULL,\n  `session_key` text NOT NULL,\n  `session_ip` text NOT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`session_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8","records":[]},"user":{"name":"user","create":"CREATE TABLE `user` (\n  `user_key` int(11) NOT NULL AUTO_INCREMENT,\n  `user_role` int(11) NOT NULL,\n  `contact_id` int(11) DEFAULT NULL,\n  `user_verified` tinyint(1) NOT NULL DEFAULT 0,\n  `user_email` text NOT NULL,\n  `user_pass` text DEFAULT NULL,\n  `user_salt` text DEFAULT NULL,\n  `user_role_mods` longtext DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`user_key`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8","records":[]},"var":{"name":"var","create":"CREATE TABLE `var` (\n  `var_id` int(11) NOT NULL AUTO_INCREMENT,\n  `var_session` tinyint(1) NOT NULL DEFAULT 0,\n  `var_name` text NOT NULL,\n  `var_content` text NOT NULL,\n  `var_type` int(11) DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) NOT NULL,\n  PRIMARY KEY (`var_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8","records":[]}}
+{"cache":{"name":"cache","create":"CREATE TABLE `cache` (\n  `cache_id` int(11) NOT NULL AUTO_INCREMENT,\n  `cache_uri` varchar(255) NOT NULL,\n  `cache_content` longtext NOT NULL,\n  `cache_date` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`cache_id`)\n) ENGINE=InnoDB DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci ROW_FORMAT=COMPACT","records":[]},"contact":{"name":"contact","create":"CREATE TABLE `contact` (\n  `contact_id` int(11) NOT NULL AUTO_INCREMENT,\n  `contact_nickname` text NOT NULL,\n  `contact_fullname` text DEFAULT NULL,\n  `contact_image` text DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) NOT NULL DEFAULT 0,\n  PRIMARY KEY (`contact_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci","records":[]},"contact_meta":{"name":"contact_meta","create":"CREATE TABLE `contact_meta` (\n  `contact_meta_id` int(11) NOT NULL AUTO_INCREMENT,\n  `contact_id` int(11) NOT NULL,\n  `contact_meta_name` text NOT NULL,\n  `contact_meta_content` text NOT NULL,\n  `contact_meta_primary` tinyint(1) DEFAULT NULL,\n  PRIMARY KEY (`contact_meta_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci","records":[]},"data":{"name":"data","create":"CREATE TABLE `data` (\n  `data_id` int(11) NOT NULL AUTO_INCREMENT,\n  `data_name` tinytext NOT NULL,\n  `data_slug` text NOT NULL,\n  `data_content` longtext DEFAULT NULL,\n  `data_type` varchar(25) NOT NULL,\n  `data_parent` int(11) NOT NULL DEFAULT 0,\n  `data_status` varchar(25) DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) NOT NULL DEFAULT 0,\n  PRIMARY KEY (`data_id`),\n  KEY `data_type` (`data_type`),\n  KEY `data_parent` (`data_parent`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_swedish_ci","records":[]},"data_meta":{"name":"data_meta","create":"CREATE TABLE `data_meta` (\n  `data_meta_id` int(11) NOT NULL AUTO_INCREMENT,\n  `data_id` int(11) NOT NULL,\n  `data_meta_name` varchar(25) NOT NULL,\n  `data_meta_content` text NOT NULL,\n  PRIMARY KEY (`data_meta_id`),\n  KEY `data_id` (`data_id`),\n  KEY `data_meta_name` (`data_meta_name`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_swedish_ci","records":[]},"history":{"name":"history","create":"CREATE TABLE `history` (\n  `history_id` int(11) NOT NULL AUTO_INCREMENT,\n  `user_key` int(11) NOT NULL DEFAULT 0,\n  `data_id` int(11) NOT NULL,\n  `history_val` varchar(255) NOT NULL,\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`history_id`)\n) ENGINE=InnoDB DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci","records":[]},"role":{"name":"role","create":"CREATE TABLE `role` (\n  `role_id` int(11) NOT NULL AUTO_INCREMENT,\n  `role_title` text NOT NULL,\n  `role_permissions` longtext NOT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`role_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE=utf8_general_ci","records":[]},"route":{"name":"route","create":"CREATE TABLE `route` (\n  `route_id` int(11) NOT NULL AUTO_INCREMENT,\n  `route_ord` int(11) NOT NULL DEFAULT 0,\n  `route_controller` text NOT NULL,\n  `route_ext` text DEFAULT NULL,\n  `ext_primary` tinyint(1) NOT NULL DEFAULT 0,\n  `route_slug` text DEFAULT NULL,\n  `route_admin` tinyint(1) NOT NULL DEFAULT 0,\n  `in_h_nav` tinyint(1) NOT NULL DEFAULT 0,\n  `in_f_nav` tinyint(1) NOT NULL DEFAULT 0,\n  `nav_display` tinytext DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) DEFAULT NULL,\n  PRIMARY KEY (`route_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_swedish_ci","records":[]},"session":{"name":"session","create":"CREATE TABLE `session` (\n  `session_id` int(11) NOT NULL AUTO_INCREMENT,\n  `user_key` int(11) NOT NULL,\n  `session_key` text NOT NULL,\n  `session_ip` text NOT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`session_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE=utf8_general_ci","records":[]},"user":{"name":"user","create":"CREATE TABLE `user` (\n  `user_key` int(11) NOT NULL AUTO_INCREMENT,\n  `user_role` int(11) NOT NULL,\n  `contact_id` int(11) DEFAULT NULL,\n  `user_verified` tinyint(1) NOT NULL DEFAULT 0,\n  `user_email` text NOT NULL,\n  `user_pass` text DEFAULT NULL,\n  `user_salt` text DEFAULT NULL,\n  `user_role_mods` longtext DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  PRIMARY KEY (`user_key`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE=utf8_general_ci","records":[]},"var":{"name":"var","create":"CREATE TABLE `var` (\n  `var_id` int(11) NOT NULL AUTO_INCREMENT,\n  `var_session` tinyint(1) NOT NULL DEFAULT 0,\n  `var_name` text NOT NULL,\n  `var_content` text NOT NULL,\n  `var_type` int(11) DEFAULT NULL,\n  `create_date` datetime NOT NULL DEFAULT current_timestamp(),\n  `last_edit` datetime NOT NULL DEFAULT current_timestamp() ON UPDATE current_timestamp(),\n  `user_key` int(11) NOT NULL,\n  PRIMARY KEY (`var_id`)\n) ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE=utf8_general_ci","records":[]}}
